core-styles/objects/_base.scss
/*
    NewSpring Web Core Styles -- $BASE
*/


/* ============================================================

    $DOCUMENT

    sets the base font color and background of sites


============================================================ */

html {
    color: $base-font-color;
    font-size: 100%;
    -webkit-font-smoothing: antialiased;
    background: $dark-color;

    &:after {
        display: none;
    }
}



// Used to make sure no accidental wide margin/img breaks bounds
body {
  overflow-x: hidden;
  // There's a small bug in webkit that requires a CSS3 property to be set on an element.
  // Read more about it at http://bit.ly/NEdoDq




}




/* ============================================================

    $UTILITIES


============================================================ */

.clickable {
    cursor: pointer;
    text-decoration: none;

    &:after {
        content: '';
        position: absolute;
        top: 0px;
        left: 0px;
        right: 0px;
        bottom: 0px;
        @include vendor(transition, all .1s $global-function);
    }

    &:hover {
        &:after {
            background: rgba(0,0,0,.2);
        }
    }
    * {
        text-decoration: none;
    }
}

.hover--white {

    &:hover {

        * {
            color: $light-color;
        }
    }
}

.desk-locked {
    @include media-query(anchored) {
        overflow: hidden;
    }
}

.scroll-x {
    overflow-x: auto;
}

.overflow-visible {
    overflow: visible !important;
}

.underlined {
    text-decoration: underline;
}

@include namespace(soft-half--top) {
    padding-top: ($base-spacing-unit/2) !important;
}

@include namespace(hard) {
    padding: 0 !important;
}

@include namespace(hard--left) {
    padding-left: 0 !important;
}

@include namespace(hard--right) {
    padding-right: 0 !important;
}

@include namespace(hard--sides) {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

@include namespace(flush) {
    margin: 0 !important;
}

@include namespace(flush--left) {
    margin-left: 0 !important;
}

@include namespace(flush--right) {
    margin-right: 0 !important;
}

@include namespace(flush--sides) {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

@include namespace(flush--ends) {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
}

@include namespace(push-quarter--bottom) {
    margin-bottom: $base-spacing-unit/4 !important;
}

.hover--dark {
    a:hover {
        color: $dark-color;
    }
}

.border--none {
  border-top: none !important;
  border-bottom: none !important;
  border-left: none !important;
  border-right: none !important;
}


/* ============================================================

    $TEXT MODIFIER UTILITIES


============================================================ */

.colfax {
    font-family: $base-heading-font;
}

.meta-serif {
    font-family: $base-body-copy-font;
}

.capitalize {
    text-transform: capitalize;
}

.lowercase {
    text-transform: lowercase;
}

.uppercase {
    text-transform: uppercase;
}

.remove-decoration {
    text-decoration: none;
}

.dark {
    color: $dark-color;
    border-color: $dark-color;

    &:before, &:after {
        border-color: $dark-color ;
    }


    span {
        color: $dark-color;
    }
}

.grey, .gray {
    color: lighten($medium-color,20) ;
    border-color: lighten($medium-color,20) ;
}

.brand, .primary {
    color: $brand-color ;
    border-color: $brand-color ;

    &:before, &:after {
        border-color: $brand-color ;
    }

    &:hover {
        color: $brand-color ;
    }

    span {
        color: $brand-color;

        &:hover {
            color: $brand-color;
        }
    }
}

.color--primary {
    color: $brand-color !important;
}

.color--secondary {
    color: $secondary-color !important;
}

.color--tertiary {
    color: $tertiary-color !important;
}

.background--primary {
    background-color: $brand-color !important;
}

.background--secondary {
    background-color: $secondary-color !important;
}

.background--tertiary {
    background-color: $tertiary-color !important;
}

.background--dark {
    background-color: $dark-color !important;
}

.light {
    color: $light-color !important;
    border-color: $light-color ;

    &:before, &:after {
        border-color: $light-color ;
    }

    &.link--arrow {
        &:before, &:after {
            border-color: $light-color !important;
        }
    }

    &:hover {
        color: $light-color ;
    }

    span {
        color: $light-color;

        &:hover {
            color: $light-color;
        }
    }
}

// Social Colors

.color--facebook {
    color: $facebook;

    &.btn--share {
        border-color: $facebook;
        background-color: $facebook;
        color: $light-color;

        &:hover {
            background-color: darken($facebook, 10);
            border-color: darken($facebook, 10);
        }
    }

    &.link--arrow {
        color: $facebook;

        &:after {
            border-color: $facebook;
        }

        &:hover {
            color:  darken($facebook, 20);

            &:after {
                border-color: darken($facebook, 20);
            }
        }
    }
}

.color--twitter {
    color: $twitter;

    &.btn--share {
        border-color: $twitter;
        background-color: $twitter;
        color: $light-color;

        &:hover {
            background-color: darken($twitter, 10);
            border-color: darken($twitter, 10);
        }
    }

    &.link--arrow {
        color: $twitter;

        &:after {
            border-color: $twitter;
        }

        &:hover {
            color:  darken($twitter, 20);

            &:after {
                border-color: darken($twitter, 20);
            }
        }
    }
}
/* ... */

